# pyperSpec

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-package.yml
api-spectraframe/: index.html
docs/: api-spectraframe.md  reference.md
pyspc/: __init__.py  baselines.py  concatenation.py  peaks.py  spectra.py  spikes.py  testing.py  utils.py
search/: search_index.json
tests/: test_concatenation.py  test_peaks.py  test_spectra.py
