[tool.poetry]
name = "pyspc"
version = "0.2.0"
license = "MIT"
description = "Tools for Spectroscopy"
authors = ["Rustam Guliev <glvrst@gmail.com>"]
readme = "README.md"
keywords = ["spectroscopy", "Raman", "IR", "signal", "processing"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
scipy = "^1.11.2"
pybaselines = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
ipython = "^8.15.0"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = ["E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9
target-version = "py39"
ignore-init-module-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
